--- a/style.css
+++ b/style.css
@@ -1,3 +1,69 @@
-body {
-    background: lightblue;
+
+/* 181924 middle rgb( 24, 25, 36)
+/* 333541 light rgb(51,53, 65)
+/* 080915 dark  rgb(8, 9, 21) */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+body {
+    background: white;
+    padding: 20px;
+    color: black;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: lighter;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+/**** Start of header ****/
+.header { 
+    height: 95vh;
+    background-image: linear-gradient(
+        to right bottom, 
+        rgba(51, 53, 65, 0.6), 
+        rgba(8, 9, 21, 0.6) ), 
+        url(../img/asianbowl.jpg); 
+    background-size: cover;
+    background-position: bottom;
+    position: relative; /* Reference for the positioning of the logo */
+}
+
+.logo-area {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.logo {
+    height: 400px;
+}
+
+.text-box {
+    position: absolute;
+    text-align: center;
+    top: 35%;
+    left:50%;
+    transform: translate(-50%, -50%);
+}
+
+
+.header-title {
+    color: white;
+}
+
+.header-title-main {
+    display: block;
+    font-size: 55px;
+    letter-spacing: 8px;
+}
+
+.header-title-main-comment {
+    display: block;
+    font-size: 35px;
+    letter-spacing: 2px;
+}
+/**** /End of header ****/
