--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 }
 
 /**** Start of header ****/
+
 .header { 
     height: 95vh;
     background-image: linear-gradient(
@@ -57,13 +58,27 @@ body {
 
 .header-title-main {
     display: block;
-    font-size: 55px;
+    font-size: 60px;
     letter-spacing: 8px;
+    animation-name: fadeIn;
+    animation-duration: 4s;
 }
 
 .header-title-main-comment {
     display: block;
     font-size: 35px;
     letter-spacing: 2px;
+    animation-name: fadeIn;
+    animation-duration: 4s;
 }
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;   
+    } 
+    100% {
+        opacity: 1;
+    }
+}
+
 /**** /End of header ****/
