--- a/style.css
+++ b/style.css
@@ -23,11 +23,10 @@ body {
 
 .header { 
     height: 95vh;
-    background-image: linear-gradient(
-        to right bottom, 
-        rgba(51, 53, 65, 0.6), 
-        rgba(8, 9, 21, 0.6) ), 
-        url(../img/asianbowl.jpg); 
+    background-image: linear-gradient( 
+        rgba(51, 53, 65, 0.5), 
+        rgba(8, 9, 21, 0.5) ),
+        url(./img/asianbowl.jpg);  
     background-size: cover;
     background-position: bottom;
     position: relative; /* Reference for the positioning of the logo */
