--- a/style.css
+++ b/style.css
@@ -39,13 +39,13 @@ body {
 }
 
 .logo {
-    height: 400px;
+    height: 300px;
 }
 
 .text-box {
     position: absolute;
     text-align: center;
-    top: 35%;
+    top: 45%;
     left:50%;
     transform: translate(-50%, -50%);
 }
@@ -81,3 +81,26 @@ body {
 }
 
 /**** /End of header ****/
+
+.btn:link, 
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 10px 30px;
+    border-radius: 20px;
+    display: inline-block;
+    margin-top: 30px;
+    font-weight: bolder;
+    transition: 0.5s;
+}
+
+.btn-color {
+    background-color:white;
+    color: rgb(8, 9, 21);
+}
+
+.btn:hover {
+    background: green;
+    /* transition: 1s; */
+    transform: scale(1.5)   
+}
